Added nearby places list

--- a/src/app/pages/placeslistmodal/placeslistmodal.page.html
+++ b/src/app/pages/placeslistmodal/placeslistmodal.page.html
@@ -7,7 +7,7 @@
 <ion-content>
   <div>
     <ion-list>
-      <ion-item *ngFor="let place of thePlacesList">
+      <ion-item *ngFor="let place of placesList">
         <ion-label>{{ place.name }}</ion-label>
         <ion-button (click)="book(place.id, place.name)">Book</ion-button>
       </ion-item>
