--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,6 +31,10 @@
             <ion-icon slot="start" name="build"></ion-icon>
             <ion-label>Settings</ion-label>
           </ion-item>
+          <ion-item routerLink="/session-history">
+            <ion-icon slot="start" name="hourglass"></ion-icon>
+            <ion-label>History</ion-label>
+          </ion-item>
           <ion-item (click)="onLogout()" button>
             <ion-icon name="exit" slot="start"></ion-icon>
             <ion-label>Logout</ion-label>
