Fixed the 2 day bug using apache legacy and adding firebaseX in place of firebase

--- a/src/app/pages/coffee/coffee.page.html
+++ b/src/app/pages/coffee/coffee.page.html
@@ -16,8 +16,7 @@
   </ion-fab>
   <ion-card class="domine card-price" color="red-purple">
     <ion-card-header>
-      <ion-card-content
-        >The total price so far is: {{ totalPrice | currency: 'KSH ' }}
+      <ion-card-content>The total price so far is: {{ totalPrice | async}}
       </ion-card-content>
     </ion-card-header>
     <!-- <ion-content>{{ totalPrice }}</ion-content> -->
