--- a/src/app/pages/menu/profile/profile.page.html
+++ b/src/app/pages/menu/profile/profile.page.html
@@ -59,18 +59,18 @@
           <ion-button color="secondary" (click)="openImagePicker()">Image Picker</ion-button>
         </ion-col>
       </ion-row> -->
-      <ion-row>
-        <!-- <ion-col size-md="6" offset-md="3">
+      <!-- <ion-row>
+        <ion-col size-md="6" offset-md="3">
           <ion-button color="secondary" (click)="uploadImage()">Upload to firebase</ion-button>
-        </ion-col> -->
+        </ion-col>
         <ion-col size-md="6" offset-md="3">
           <ion-buttons color="secondary">
             <label for="uploadBtn">Choose an image</label>
             <input id="uploadBtn" type="file" class="upload" (change)="uploadFile($event.target.files)" />
-            <!-- <ion-button color="secondary" (click)="selectImageLocation()">Choose Image</ion-button> -->
+            <ion-button color="secondary" (click)="selectImageLocation()">Choose Image</ion-button>
           </ion-buttons>
         </ion-col>
-      </ion-row>
+      </ion-row> -->
 
     </ion-buttons>
   </ion-card>
