--- a/src/app/pages/auth/forgot-password/forgot-password.page.html
+++ b/src/app/pages/auth/forgot-password/forgot-password.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons>
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
     <ion-title>Reset Password</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -10,11 +13,11 @@
       <ion-row>
         <ion-col size-md="6" offset-md="3">
           <ion-list>
-            <ion-item>
-              <ion-label> Forgot your Password?</ion-label>
-            </ion-item>
-            <ion-item>
-              <p>Enter your email below and follow the instructions sent to recover your password.</p>
+            <ion-item class="comfortaa">
+              <ion-label>
+                <b> Forgot your Password?</b>
+                <p>Enter your email below and follow the instructions sent to recover your password.</p>
+              </ion-label>
             </ion-item>
             <ion-item>
               <ion-label position="floating">Email</ion-label>
@@ -28,7 +31,7 @@
       </ion-row>
       <ion-row>
         <ion-col size-md="6" offset-md="3">
-          <ion-button type="submit" expand="block" color="primary" fill="clear">Recover Password
+          <ion-button type="submit" expand="block" color="secondary" fill="clear">Recover Password
           </ion-button>
         </ion-col>
       </ion-row>
