--- a/src/app/pages/auth/login/login.page.html
+++ b/src/app/pages/auth/login/login.page.html
@@ -9,7 +9,7 @@
     <ion-grid>
       <ion-row>
         <ion-col size-md="6" offset-md="3">
-          <ion-list>
+          <ion-list class="comfortaa">
             <ion-item>
               <ion-label position="floating">Email</ion-label>
               <ion-input #emailCtrl="ngModel" ngModel name="email" type="email"></ion-input>
@@ -38,18 +38,20 @@
           </ion-button>
         </ion-col>
       </ion-row>
+      <div class="ion-text-center">
+        <span>OR</span>
+      </div>
       <ion-row>
         <ion-col size-md="6" offset-md="3">
-          <ion-button expand="block" color="primary" (click)=" resetPass()" type="button">Forgot Password?
-          </ion-button>
           <ion-button color="black" expand="block" class="ion-align-items-center" (click)="loginGoogle()">
             Login With Google
             <ion-icon slot="start" name="logo-google"></ion-icon>
           </ion-button>
-          <!-- <ion-button color="success" expand="block" (click)="loginPhone()">
-            Login With Phone
-            <ion-icon slot="start" name="call"></ion-icon>
-          </ion-button> -->
+        </ion-col>
+        <ion-col size-md="6" offset-md="3" size="12">
+          <ion-button shape="round" expand="block" fill="outline" color="primary" (click)=" resetPass()" type="button">
+            Forgot Password?
+          </ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
