--- a/src/app/pages/auth/register/register.page.html
+++ b/src/app/pages/auth/register/register.page.html
@@ -9,7 +9,7 @@
     <ion-grid>
       <ion-row>
         <ion-col size-md="6" offset-md="3">
-          <ion-list>
+          <ion-list class="comfortaa">
             <ion-item noline>
               <ion-label>All fields labeled * are required.</ion-label>
             </ion-item>
@@ -46,28 +46,27 @@
           </ion-list>
         </ion-col>
       </ion-row>
-      <ion-row>
+      <ion-row class="kanit">
         <ion-col size-md="6" offset-md="3">
-          <ion-button [disabled]="!f.valid" type="submit" expand="block" color="primary">
+          <ion-button [disabled]="!f.valid" type="submit" expand="block" color="green">
             Sign Up
           </ion-button>
-          <ion-button (click)="onSwitchMode()" type="button" expand="block" color="primary" fill="clear">Switch to
+          <ion-button (click)="onSwitchMode()" type="button" expand="block" color="green" fill="clear">Switch to
             Login
           </ion-button>
-          <ion-label>By clicking Sign up you agree to the following <a href="#">Terms and Conditions</a> without
-            reservation</ion-label>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col size-md="6" offset-md="3">
+          <div class="ion-text-center">
+            <span>OR</span>
+          </div>
           <ion-button color="black" expand="block" class="ion-align-items-center" (click)="loginGoogle()">
             Login With Google
             <ion-icon slot="start" name="logo-google"></ion-icon>
           </ion-button>
-          <!-- <ion-button color="success" expand="block" (click)="loginPhone()">
-            Login With Phone
-            <ion-icon slot="start" name="call"></ion-icon>
-          </ion-button> -->
+        </ion-col>
+      </ion-row>
+      <ion-row class="kanit">
+        <ion-col size-md="6" offset-md="3">
+          <ion-label>By clicking Sign Up you agree to the following <a href="#">Terms and Conditions</a> without
+            reservation</ion-label>
         </ion-col>
       </ion-row>
     </ion-grid>
