--- a/src/app/pages/menu/settings/display/display.page.html
+++ b/src/app/pages/menu/settings/display/display.page.html
@@ -12,7 +12,8 @@
   <ion-list>
     <ion-item>
       <ion-label>Dark Mode</ion-label>
-      <ion-toggle (click)="changeColour()" id="themeToggle" color="dark"></ion-toggle>
+      <ion-toggle checked="{{ myToggleValue }}" (click)="changeColour()" id="themeToggle" color="dark">
+      </ion-toggle>
     </ion-item>
   </ion-list>
 
