Fixed history sessions display

--- a/src/app/pages/session-history/session-history.page.html
+++ b/src/app/pages/session-history/session-history.page.html
@@ -23,7 +23,7 @@
     <ion-grid *ngIf="history || history.length > 0">
       <ion-card *ngFor="let item of history">
         <ion-card-header>
-          <ion-card-title class="comfortaa">{{ item.createdBy }}</ion-card-title>
+          <ion-card-title class="comfortaa">{{ item.placeBookedName }}</ion-card-title>
         </ion-card-header>
         <ion-card-content>
           <ion-row class="ion-align-items-center">
