--- a/src/app/pages/session-history/session-history.page.html
+++ b/src/app/pages/session-history/session-history.page.html
@@ -8,8 +8,8 @@
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-grid *ngIf="(history || history.length > 0); else loading">
+  <ion-list *ngIf="history | async as history; else loading">
+    <ion-grid *ngIf="history.length > 0; else noHistory">
       <ion-card *ngFor="let item of history">
         <ion-card-header>
           <ion-card-title class="comfortaa">{{ item.placeBookedName }}</ion-card-title>
@@ -31,18 +31,18 @@
         </ion-card-content>
       </ion-card>
     </ion-grid>
-    <ng-template #loading>
-      <ion-grid>
-        <ion-item [routerLink]="['/tab']" routerLinkActive="router-link-active">
-          <ion-row>
-            <ion-col>
-              <ion-label>
-                Your history is lonely :( <br> Care to try one of our places?
-              </ion-label>
-            </ion-col>
-          </ion-row>
-        </ion-item>
-      </ion-grid>
+    <ng-template #noHistory>
+      <ion-item [routerLink]="['/tab']" routerLinkActive="router-link-active">
+        Your history is lonely :( <br> Care to try
+        one of our places?
+      </ion-item>
+
     </ng-template>
   </ion-list>
+  <ng-template #loading>
+    <ion-progress-bar color="tertiary" type="indeterminate"></ion-progress-bar>
+
+
+  </ng-template>
+
 </ion-content>
