Polished the page guards

--- a/src/app/pages/menu/profile/profile.page.html
+++ b/src/app/pages/menu/profile/profile.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar mode="ios" class="lekton" color="blue-purple">
     <ion-buttons>
-      <ion-menu-button menu="menu"></ion-menu-button>
+      <ion-back-button></ion-back-button>
     </ion-buttons>
     <ion-title>Profile</ion-title>
     <!-- <ion-buttons slot="end" (click)="uploadImage()">
