--- a/src/app/pages/session-history/session-history.page.html
+++ b/src/app/pages/session-history/session-history.page.html
@@ -18,7 +18,7 @@
           <ion-row class="ion-align-items-center">
             <ion-col size="8">
               <ion-label class="righteous">
-                <b>{{ item.timestampStart.seconds * 1000 | date:'dd/yy/MM, HH:mm'}} to
+                <b>{{ item.timestampStart.seconds * 1000 | date:'dd/MM/yyyy, HH:mm'}} to
                   {{ item.timestampEnd.seconds * 1000 | date:'HH:mm'}}</b>
               </ion-label>
             </ion-col>
