--- a/src/app/pages/placeslistmodal/placeslistmodal.page.html
+++ b/src/app/pages/placeslistmodal/placeslistmodal.page.html
@@ -7,8 +7,8 @@
 <ion-content>
   <div>
     <ion-list>
-      <ion-item *ngFor="let place of placesList">
-        <ion-label>{{ place.name }}</ion-label>
+      <ion-item>
+        <ion-label>{{ place.name }} SPIQ</ion-label>
         <ion-button (click)="book(place.id, place.name)">Book</ion-button>
       </ion-item>
       <ion-item>
