Added policy & terms files

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
     <ion-header>
       <ion-toolbar class="lekton" color="blue-purple">
         <ion-title>
-          SPiQ
+          SPIQ
         </ion-title>
       </ion-toolbar>
     </ion-header>
