--- a/src/app/pages/auth/forgot-password/forgot-password.page.html
+++ b/src/app/pages/auth/forgot-password/forgot-password.page.html
@@ -16,12 +16,13 @@
             <ion-item class="comfortaa">
               <ion-label>
                 <b> Forgot your Password?</b>
-                <p>Enter your email below and follow the instructions sent to recover your password.</p>
+                <p>Enter your email below and follow the <br> instructions sent to recover your password.</p>
               </ion-label>
             </ion-item>
             <ion-item>
               <ion-label position="floating">Email</ion-label>
-              <ion-input placeholder="Email" #emailCtrl="ngModel" ngModel name="email" type="email"></ion-input>
+              <ion-input placeholder="Email" #emailCtrl="ngModel" required ngModel name="email" type="email">
+              </ion-input>
             </ion-item>
             <ion-item *ngIf="!emailCtrl.valid && emailCtrl.touched" lines="none">
               <p>Enter valid email address!</p>
@@ -31,18 +32,19 @@
       </ion-row>
       <ion-row>
         <ion-col size-md="6" offset-md="3">
-          <ion-button type="submit" expand="block" color="secondary" fill="clear">Recover Password
+          <ion-button [disabled]="!f.valid" type="submit" expand="block" color="secondary" fill="outline">Recover
+            Password
           </ion-button>
         </ion-col>
       </ion-row>
       <ion-row>
         <ion-col size-md="6" offset-md="3">
-          <ion-button (click)="goToLogin()" type="button" expand="block" color="primary" fill="clear">Login
+          <ion-button (click)="goToLogin()" type="button" expand="block" color="primary" fill="outline">Login
           </ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
   </form>
-  >
+
 
 </ion-content>
