--- a/src/app/pages/auth/login/login.page.html
+++ b/src/app/pages/auth/login/login.page.html
@@ -54,6 +54,15 @@
           </ion-button>
         </ion-col>
       </ion-row>
+      <ion-row class="kanit">
+        <ion-col size-md="6" offset-md="3">
+          <ion-label>By signing in you agree to the following <a target="_blank"
+              href="https://spiq.flycricket.io/privacy.html">Privacy Policy</a> and <a target="_blank"
+              href="https://spiq.flycricket.io/terms.html">Terms and Conditions</a>
+            without
+            reservation</ion-label>
+        </ion-col>
+      </ion-row>
     </ion-grid>
   </form>
 
