--- a/src/app/pages/auth/register/register.page.html
+++ b/src/app/pages/auth/register/register.page.html
@@ -65,7 +65,10 @@
       </ion-row>
       <ion-row class="kanit">
         <ion-col size-md="6" offset-md="3">
-          <ion-label>By clicking Sign Up you agree to the following <a href="#">Terms and Conditions</a> without
+          <ion-label>By clicking Sign Up you agree to the following <a target="_blank"
+              href="https://spiq.flycricket.io/privacy.html">Privacy Policy</a> and <a target="_blank"
+              href="https://spiq.flycricket.io/terms.html">Terms and Conditions</a>
+            without
             reservation</ion-label>
         </ion-col>
       </ion-row>
