--- a/src/app/pages/coffee/cart-modal/cart-modal.page.html
+++ b/src/app/pages/coffee/cart-modal/cart-modal.page.html
@@ -59,7 +59,7 @@
     </ion-list>
 
     <ion-button expand="full" (click)="checkout()">
-      Checkout
+      Confirm
     </ion-button>
   </div>
 
