--- a/src/app/pages/menu/settings/share/share.page.html
+++ b/src/app/pages/menu/settings/share/share.page.html
@@ -20,8 +20,7 @@
       <ion-grid>
         <ion-row>
           <ion-col offset-md="8" offset-md="2">
-            <ion-button (click)="sendShare(messageBody.innerText, 
-              messageSubject.innerText, 'https://ionicframework.com/docs')">
+            <ion-button (click)="sendShare()">
               <ion-icon slot="icon-only" name="share"></ion-icon>
             </ion-button>
           </ion-col>
