--- a/src/app/pages/menu/profile/profile.page.html
+++ b/src/app/pages/menu/profile/profile.page.html
@@ -34,18 +34,18 @@
           <ion-label *ngIf="!user">Email: {{ 'Placeholder email' }}</ion-label>
           <ion-label *ngIf="user">Email: {{ user.email }}</ion-label>
         </ion-item>
-        <ion-item>
-          <ion-icon slot="start" (click)="updatePhone()" name="create"></ion-icon>
+        <!-- <ion-item>
+          <ion-icon *ngIf="!user.phoneNumber" slot="start" (click)="updatePhone()" name="create"></ion-icon>
           <ion-label *ngIf="!user">Phone: {{ 'Placeholder phone number' }}</ion-label>
           <ion-label *ngIf="user">Phone: {{ otherPhoneNo }}</ion-label>
           <ion-item *ngIf="!otherPhoneNo">
             <ion-label position="floating" *ngIf="!user.phoneNumber">Enter Phone information</ion-label>
-            <ion-input [(ngModel)]="phoneNo"></ion-input>
+            <ion-input type="tel" minlength="10" [(ngModel)]="phoneNo"></ion-input>
           </ion-item>
-        </ion-item>
+        </ion-item> -->
         <ion-item (click)="updatePass()" *ngIf="user">
           <ion-icon slot="start" name="create"></ion-icon>
-          <ion-label>Update Password?</ion-label>
+          <ion-label>Forgot Password?</ion-label>
         </ion-item>
       </ion-list>
     </ion-card-content>
