--- a/src/app/pages/menu/settings/about/help/help.page.html
+++ b/src/app/pages/menu/settings/about/help/help.page.html
@@ -12,32 +12,44 @@
     <ion-grid>
       <ion-row>
         <ion-col size-md="6" offset-md="3">
-          <p>If you have a problem or any question to ask, just take a loook at our website or contact us through email.
+          <p>
+            If you have a problem or any question to ask, please visit our
+            website or contact us through our email: spiqreaders@gmail.com
           </p>
         </ion-col>
       </ion-row>
     </ion-grid>
   </div>
-  <div>
+  <!-- <div>
     <form #f="ngForm" (ngSubmit)="onSubmit(f)">
       <ion-grid>
         <ion-row>
           <ion-col size-md="6" offset-md="3">
             <ion-item>
-              <ion-textarea name="helpMsg" ngModel required placeholder="Ask us your question..." auto-grow>
+              <ion-textarea
+                name="helpMsg"
+                ngModel
+                required
+                placeholder="Ask us your question..."
+                auto-grow
+              >
               </ion-textarea>
             </ion-item>
           </ion-col>
         </ion-row>
         <ion-row>
           <ion-col size-md="6" offset-md="3">
-            <ion-button [disabled]="!f.valid" type="submit" expand="block" color="primary">
+            <ion-button
+              [disabled]="!f.valid"
+              type="submit"
+              expand="block"
+              color="primary"
+            >
               Send
             </ion-button>
           </ion-col>
         </ion-row>
       </ion-grid>
     </form>
-  </div>
-
+  </div> -->
 </ion-content>
