--- a/src/app/pages/coffee/cart-modal/cart-modal.page.html
+++ b/src/app/pages/coffee/cart-modal/cart-modal.page.html
@@ -35,10 +35,10 @@
             </ion-col>
           </ion-row>
           <ion-row>
-            <ion-col size="9">
+            <ion-col size="6">
               <b>{{ p.name }}</b>
             </ion-col>
-            <ion-col size="3" class="ion-text-end">
+            <ion-col size="6" class="ion-text-right">
               {{ p.amount * p.price | currency:'KES' }}
             </ion-col>
           </ion-row>
@@ -47,10 +47,10 @@
       <ion-item>
         <ion-grid>
           <ion-row>
-            <ion-col size="9">
+            <ion-col size="6">
               Total:
             </ion-col>
-            <ion-col size="3" class="ion-text-end">
+            <ion-col size="6" class="ion-text-right">
               {{ getTotal() | currency:'KES' }}
             </ion-col>
           </ion-row>
