--- a/src/app/pages/auth/login/login.page.html
+++ b/src/app/pages/auth/login/login.page.html
@@ -30,7 +30,7 @@
       </ion-row>
       <ion-row>
         <ion-col size-md="6" offset-md="3">
-          <ion-button [disabled]="!f.valid" type="submit" expand="block" color="green">
+          <ion-button type="submit" expand="block" color="green">
             Login
           </ion-button>
           <ion-button (click)="onSwitchMode()" type="button" expand="block" color="green" fill="clear">Switch to
