--- a/src/app/pages/map/map.page.html
+++ b/src/app/pages/map/map.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar mode="ios" class="lekton" color="blue-purple">
+  <ion-toolbar color="blue-purple" mode="ios" class="lekton">
     <ion-buttons>
       <ion-menu-button menu="menu"></ion-menu-button>
     </ion-buttons>
