--- a/src/app/pages/menu/settings/about/legal/privacy-policy/privacy-policy.page.html
+++ b/src/app/pages/menu/settings/about/legal/privacy-policy/privacy-policy.page.html
@@ -29,9 +29,8 @@
     <p>
       The terms used in this Privacy Policy have the same meanings as in our
       Terms and Conditions, which is accessible at
-      <a href="https://spiq.flycricket.io/terms.html"
-        >https://spiq.flycricket.io/terms.html</a
-      >&nbsp;unless otherwise defined in this Privacy Policy.
+      <a href="https://spiq.flycricket.io/terms.html">https://spiq.flycricket.io/terms.html</a>&nbsp;unless otherwise
+      defined in this Privacy Policy.
     </p>
     <p><strong>Information Collection and Use</strong></p>
     <p>
@@ -57,19 +56,13 @@
     </p>
     <ul>
       <li>
-        <a href="https://www.google.com/policies/privacy/"
-          >Google Play Services</a
-        >
+        <a href="https://www.google.com/policies/privacy/">Google Play Services</a>
       </li>
       <li>
-        <a href="https://firebase.google.com/policies/analytics"
-          >Firebase Analytics</a
-        >
+        <a href="https://firebase.google.com/policies/analytics">Firebase Analytics</a>
       </li>
       <li>
-        <a href="https://firebase.google.com/terms/crashlytics"
-          >Firebase Crashlytics</a
-        >
+        <a href="https://firebase.google.com/terms/crashlytics">Firebase Crashlytics</a>
       </li>
     </ul>
     <p><strong>Log Data</strong></p>
@@ -151,13 +144,6 @@
     <p>
       If you have any questions or suggestions about our Privacy Policy, do not
       hesitate to contact us at spiqreaders@gmail.com.
-    </p>
-    <p>
-      Learn
-      <a href="https://cube3x3.com/how-to-solve-a-rubiks-cube/"
-        >how to solve the Rubik's Cube</a
-      >
-      or use the online solver to calculate the steps needed.
     </p>
   </div>
 </ion-content>
