--- a/src/app/pages/auth/register/register.page.html
+++ b/src/app/pages/auth/register/register.page.html
@@ -11,26 +11,24 @@
         <ion-col size-md="6" offset-md="3">
           <ion-list class="comfortaa">
             <ion-item noline>
-              <ion-label>All fields labeled * are required.</ion-label>
+              <ion-label>All fields are required.</ion-label>
             </ion-item>
             <ion-item>
               <ion-label position="floating">Username</ion-label>
-              <ion-input #usernameCtrl="ngModel" ngModel name="username" type="text"></ion-input>
+              <ion-input required #usernameCtrl="ngModel" ngModel name="username" type="text"></ion-input>
             </ion-item>
             <ion-item *ngIf="!usernameCtrl.valid && usernameCtrl.touched" lines="none">
               <p>Enter valid username! Must be alphanumeric characters.</p>
             </ion-item>
             <ion-item>
               <ion-label position="floating">Email</ion-label>
-              <span>*</span>
-              <ion-input #emailCtrl="ngModel" ngModel name="email" type="email"></ion-input>
+              <ion-input required #emailCtrl="ngModel" ngModel name="email" type="email"></ion-input>
             </ion-item>
             <ion-item *ngIf="!emailCtrl.valid && emailCtrl.touched" lines="none">
               <p>Enter valid email address!</p>
             </ion-item>
             <ion-item>
               <ion-label position="floating">Password</ion-label>
-              <span>*</span>
               <ion-input #passwordCtrl="ngModel" ngModel name="password" required minlength="6" type="password">
               </ion-input>
             </ion-item>
@@ -39,7 +37,6 @@
             </ion-item>
             <ion-item>
               <ion-label position="floating">Confirm Password</ion-label>
-              <span>*</span>
               <ion-input #cpasswordCtrl="ngModel" ngModel name="cpassword" required minlength="6" type="password">
               </ion-input>
             </ion-item>
@@ -48,7 +45,7 @@
       </ion-row>
       <ion-row class="kanit">
         <ion-col size-md="6" offset-md="3">
-          <ion-button [disabled]="!f.valid" type="submit" expand="block" color="green">
+          <ion-button type="submit" expand="block" color="green">
             Sign Up
           </ion-button>
           <ion-button (click)="onSwitchMode()" type="button" expand="block" color="green" fill="clear">Switch to
