--- a/src/app/pages/menu/settings/settings.page.html
+++ b/src/app/pages/menu/settings/settings.page.html
@@ -13,13 +13,9 @@
       <ion-label>Display</ion-label>
       <ion-icon slot="start" name="color-palette"></ion-icon>
     </ion-item>
-    <ion-item [routerLink]="['/settings/about']" routerLinkActive="router-link-active">
-      <ion-label>About</ion-label>
-      <ion-icon slot="start" name="information-circle"></ion-icon>
-    </ion-item>
-    <ion-item [routerLink]="['/settings/share']" routerLinkActive="router-link-active">
-      <ion-label>Share</ion-label>
-      <ion-icon slot="start" name="share"></ion-icon>
+    <ion-item routerLink="/profile">
+      <ion-icon name="contact" slot="start"></ion-icon>
+      <ion-label>Profile</ion-label>
     </ion-item>
   </ion-list>
 
