--- a/src/app/pages/menu/settings/share/share.page.html
+++ b/src/app/pages/menu/settings/share/share.page.html
@@ -16,7 +16,7 @@
 
     </ion-card-header>
     <ion-card-content>
-      <p #messageBody>You can share this app with you friends.</p>
+      <p #messageBody>You can share this app with you friends by clicking the share button.</p>
       <ion-grid>
         <ion-row>
           <ion-col offset-md="8" offset-md="2">
