--- a/src/app/pages/menu/settings/settings.page.html
+++ b/src/app/pages/menu/settings/settings.page.html
@@ -9,7 +9,7 @@
 
 <ion-content>
   <ion-list>
-    <ion-item [routerLink]="['/settings/display']" routerLinkActive="router-link-active">
+    <ion-item routerLink="/settings/display" routerLinkActive="router-link-active">
       <ion-label>Display</ion-label>
       <ion-icon slot="start" name="color-palette"></ion-icon>
     </ion-item>
