--- a/src/app/pages/session-history/session-history.page.html
+++ b/src/app/pages/session-history/session-history.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar mode="ios" class="lekton" color="blue-purple">
     <ion-buttons>
       <ion-back-button></ion-back-button>
     </ion-buttons>
