--- a/src/app/pages/auth/forgot-password/forgot-password.page.html
+++ b/src/app/pages/auth/forgot-password/forgot-password.page.html
@@ -32,7 +32,7 @@
       </ion-row>
       <ion-row>
         <ion-col size-md="6" offset-md="3">
-          <ion-button [disabled]="!f.valid" type="submit" expand="block" color="secondary" fill="outline">Recover
+          <ion-button type="submit" expand="block" color="secondary" fill="outline">Recover
             Password
           </ion-button>
         </ion-col>
