--- a/src/app/pages/menu/settings/about/about.page.html
+++ b/src/app/pages/menu/settings/about/about.page.html
@@ -9,10 +9,10 @@
 
 <ion-content>
   <ion-list>
-    <ion-item [routerLink]="['/settings/about/help']" routerLinkActive="router-link-active">
+    <ion-item routerLink="/settings/about/help" routerLinkActive="router-link-active">
       <ion-label>Help</ion-label>
     </ion-item>
-    <ion-item [routerLink]="['/settings/about/legal']" routerLinkActive="router-link-active">
+    <ion-item routerLink="settings/about/legal" routerLinkActive="router-link-active">
       <ion-label>Legal</ion-label>
     </ion-item>
   </ion-list>
