--- a/src/app/pages/menu/settings/about/legal/legal.page.html
+++ b/src/app/pages/menu/settings/about/legal/legal.page.html
@@ -9,10 +9,10 @@
 
 <ion-content>
   <ion-list>
-    <ion-item [routerLink]="[ '/settings/about/legal/terms-conditions' ]" routerLinkActive="active">
+    <ion-item routerLink="/settings/about/legal/terms-conditions" routerLinkActive="active">
       <ion-label>Terms of Service</ion-label>
     </ion-item>
-    <ion-item [routerLink]="[ '/settings/about/legal/privacy-policy' ]" routerLinkActive="active">
+    <ion-item routerLink="/settings/about/legal/privacy-policy" routerLinkActive="active">
       <ion-label>Privacy Policy</ion-label>
     </ion-item>
     <!-- <ion-item>
