--- a/src/app/pages/tab/tab.page.html
+++ b/src/app/pages/tab/tab.page.html
@@ -9,6 +9,10 @@
         <ion-icon name="cafe"></ion-icon>
         <ion-label>Order Coffee</ion-label>
       </ion-tab-button>
+      <ion-tab-button color="orange" routerLinkActive="router-link-active" tab="locker">
+        <ion-icon name="key"></ion-icon>
+        <ion-label>Locker Storage</ion-label>
+      </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
 </ion-content>
