--- a/src/app/pages/menu/settings/about/help/help.page.html
+++ b/src/app/pages/menu/settings/about/help/help.page.html
@@ -14,8 +14,13 @@
         <ion-col size-md="6" offset-md="3">
           <p>
             If you have a problem or any question to ask, please visit our
-            website or contact us through our email: spiqreaders@gmail.com
+            website or contact us through our email: spiqreaders@gmail.com by clicking the button below.
           </p>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-button expand="block" color="primary" (click)="sendEmail()">Send email</ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
