--- a/src/app/pages/tab/tab.page.html
+++ b/src/app/pages/tab/tab.page.html
@@ -1,17 +1,29 @@
 <ion-content>
   <ion-tabs>
     <ion-tab-bar slot="bottom">
-      <ion-tab-button color="orange" routerLinkActive="router-link-active" tab="map">
+      <ion-tab-button
+        color="orange"
+        routerLinkActive="router-link-active"
+        tab="map"
+      >
         <ion-icon name="home"></ion-icon>
         <ion-label>Map</ion-label>
       </ion-tab-button>
-      <ion-tab-button color="orange" routerLinkActive="router-link-active" tab="coffee">
+      <ion-tab-button
+        color="orange"
+        routerLinkActive="router-link-active"
+        tab="coffee"
+      >
         <ion-icon name="cafe"></ion-icon>
         <ion-label>Order Coffee</ion-label>
       </ion-tab-button>
-      <ion-tab-button color="orange" routerLinkActive="router-link-active" tab="locker">
+      <ion-tab-button
+        color="orange"
+        routerLinkActive="router-link-active"
+        tab="locker"
+      >
         <ion-icon name="key"></ion-icon>
-        <ion-label>Locker Storage</ion-label>
+        <ion-label>Storage Lockers</ion-label>
       </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
